jenkins-kubernetes/Terraform/scripts/slaves.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: jenkins-slave-jnlp
  namespace: jenkins
  labels:
    role: slave-manual
    type: manual
    connection: jnlp
spec:
  containers:
  - name: jenkins-slave
    image: jenkinsci/jnlp-slave
    securityContext:
      privileged: false
    tty: true
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins-slave-ssh
  namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      role: slave-manual
      type: manual
      connection: ssh
  template:
    metadata:
      labels:
        role: slave-manual
        type: manual
        connection: ssh
    spec:
      containers:
      - name: jenkins-slave
        image: docker.io/twiceaday/jenkins-slave
        securityContext:
          privileged: false
        tty: true
---
apiVersion: v1
kind: Service
metadata:
  namespace: jenkins
  name: jenkins-slave-ssh-svc
  labels:
    role: slave-manual
    type: manual
    connection: ssh
spec:
  type: ClusterIP
  ports:
    - name: ssh
      port: 22
      targetPort: 22
  selector:
    role: slave-manual
    type: manual
    connection: ssh
