jenkins-kubernetes/Terraform/scripts/sonar.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sonar-deployment
  namespace: sonar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonar-server
  template:
    metadata:
      labels:
        app: sonar-server
    spec:
      containers:
      - name: sonar-server
        image: sonarqube
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: sonarqube-data
          mountPath: /opt/sonarqube/data
        - name: sonarqube-extensions
          mountPath: /opt/sonarqube/extensions
        - name: sonarqube-logs
          mountPath: /opt/sonarqube/logs
      volumes:
        - name: sonarqube-data
          persistentVolumeClaim:
            claimName: sonar-data-claim
        - name: sonarqube-extensions
          persistentVolumeClaim:
            claimName: sonar-extensions-claim
        - name: sonarqube-logs
          persistentVolumeClaim:
            claimName: sonar-logs-claim
---
apiVersion: v1
kind: Service
metadata:
  namespace: sonar
  name: sonar-svc
  labels:
    app: sonar-server
spec:
  type: NodePort
  ports:
    - name: ui
      port: 9000
      targetPort: 9000
  selector:
    app: sonar-server

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: sonar
  name: ingress-sonar
spec:
  rules:
  - host: sonar.k8s.skazak.playpit.net
    http:
      paths:
      - path: /
        backend:
          serviceName: sonar-svc
          servicePort: 9000
